--- a/app/angular.json
+++ b/app/angular.json
@@ -124,5 +124,8 @@
         }
       }
     }},
-  "defaultProject": "watchedit"
+  "defaultProject": "watchedit",
+  "cli": {
+    "analytics": false
+  }
 }
